kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb-deployment
  labels:
    app: vprodb-jpj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb-jpj
  template:
    metadata:
      labels:
        app: vprodb-jpj
    spec:
      containers:
      - name: vprodb
        image: vprocontainers/vprofiledb
        volumeMounts: # mounts the volume created below to this path inside the container
        - name: vprodb-data-joyan # refers to the volume created below
          mountPath: /var/lib/mysql
        ports:
        - name: vprodb-port
          containerPort: 3306 # MySQL default port in 
      volumes:
        - name: vprodb-data-joyan # creates a volume wuth this name which claims 
                                  # the Persistent Volume Claim defined in dbpvc.yaml
          persistentVolumeClaim:
            claimName: db-pv-claim # from dbpvc.yaml, the Persistent Volume Claim that we 
                                   # created in Step #1
