kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service  
spec:
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      port: 8080 #   the port that the service will expose inside the cluster
      targetPort: 8080 # this is the port on which the application is listening inside the container
type: ClusterIP # default type, makes the service only reachable from within the cluster
