kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb # this name has to be same as the DB host name used in the application deployment: 
               # If you see appications propery file, it has this JDBC connection.
               # jdbc.url=jdbc:mysql://vprodb:3306/
               # So the service name must be vprodb
spec:
  selector:
    app: vprodb-jpj # this label must match the label defined in dbdeploy.yaml 
                    # under spec.template.metadata.labels
  ports:
    - protocol: TCP
      port: 3306 # the port that the service will expose inside the cluster
      targetPort: vprodb-port # this port name must match the containerPort name defined in 
                              # dbdeploy.yaml. This is the port on which MySQL is 
                              # listening inside the container
  type: ClusterIP # default type, makes the service only reachable from within the cluster
