kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01 # this name has to be same as the application proerty file:
               # If you see appications propery file
               # memcached.active.host=vprocache01
               # So the service name must be vprocache01
spec:
  selector:
    app: vpromc # this label must match the label defined in mcdep.yaml 
                    # under spec.template.metadata.labels
  ports:
    - protocol: TCP
      port: 11211 # the port that the service will expose inside the cluster
      targetPort: vpromc-port # this port name must match the containerPort name defined in 
                              # mcdep.yaml. This is the port on which Memcached is 
                              # listening inside the container
  type: ClusterIP # default type, makes the service only reachable from within the cluster
