kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq01 # this name has to be same as the DB host name used in the application deployment: 
               # If you see appications propery file
               # rabbitmq.address=vpromq01
               # So the service name must be vprormq01
spec:
  selector:
    app: vprormq # this label must match the label defined in rmqdeploy.yaml 
                    # under spec.template.metadata.labels
  ports:
    - protocol: TCP
      port: 11211 # the port that the service will expose inside the cluster
      targetPort: vprormq-port # this port name must match the containerPort name defined in 
                              # rmqdeploy.yaml. This is the port on which RabbitMQ is 
                              # listening inside the container
  type: ClusterIP # default type, makes the service only reachable from within the cluster
